<resources>
    <string name="app_name">Wi-Fi Direct Tester</string>
    <string name="log_tag">crash_avoidance_log</string>
    <!-- Titles -->
    <string name="title_logs">Logs</string>
    <string name="title_discover_services">Discover Services</string>

    <!-- Actions -->
    <string name="action_disconnect">Disconnect</string>
    <string name="action_register_wifi_direct">Register Wi-Fi Direct</string>
    <string name="action_unregister_wifi_direct">Unregister Wi-Fi Direct</string>
    <string name="action_toggle_wifi">Toggle Wi-Fi</string>
    <string name="action_enable_wifi">Enable Wi-Fi</string>
    <string name="action_disable_wifi">Disable Wi-Fi</string>
    <string name="action_view_logs">View Logs</string>
    <string name="action_exit">Exit</string>
    <string name="action_close">Close</string>
    <string name="action_register_receiver">Register Broadcast Receiver</string>
    <string name="action_unregister_receiver">Unregister Broadcast Receiver</string>
    <string name="action_register_service">Register Local Service</string>
    <string name="action_unregister_service">Unregister Local Service</string>
    <string name="action_discover_services">Discover Local Services</string>

    <!-- Statuses -->
    <string name="status_wifi_enabled">Wi-Fi Enabled</string>
    <string name="status_wifi_disabled">Wi-Fi Disabled</string>
    <string name="status_receiver_registered">BroadcastReceiver Registered</string>
    <string name="status_receiver_unregistered">BroadcastReceiver Unregistered</string>
    <string name="status_wifi_direct_initialized">App Registered with Wi-Fi Direct</string>
    <string name="status_wifi_direct_unregistered">Wi-Fi Direct Unregistered</string>
    <string name="status_service_registered">Local Service Registered</string>
    <string name="status_service_unregistered">Local Service Unregistered</string>
    <string name="status_viewing_logs">Viewing Logs</string>

    <!-- Warnings -->
    <string name="warning_wifi_already_enabled">
        Failed to Enable Wi-Fi:\n  Wi-Fi Already Enabled</string>
    <string name="warning_wifi_already_disabled">
        Failed to Disable Wi-Fi:\n  Wi-Fi Already Disabled</string>
    <string name="warning_disable_wifi_failed">
        Failed to Enable Wi-Fi</string>
    <string name="warning_service_registration_failed">
        Failed to Register Local Service</string>
    <string name="warning_register_service_wifi_direct">
        Failed to Register Local Service:\n  First Register Wi-Fi Direct</string>
    <string name="warning_receiver_wifi">
        Failed to Register Broadcast Receiver:\n  First Enable Wi-Fi</string>
    <string name="warning_receiver_wifi_direct">
        Failed to Register Broadcast Receiver:\n  First Enable Wi-Fi Direct</string>
    <string name="warning_unregister_receiver">
        Failed to Unregister Broadcast Receiver</string>
    <string name="warning_register_service_wifi">
        Failed to Register Local Service:\n  First Enable Wi-Fi</string>
    <string name="warning_service_unregistration_failed">
        Failed to Unregister Local Service</string>
    <string name="warning_discover_service_wifi">
        Failed to Discover Services:\n  First Enable Wi-Fi</string>
    <string name="warning_discover_service_wifi_direct">
        Failed to Discover Services:\n  First Register Wi-Fi Direct</string>
    <string name="warning_wifi_direct_wifi_disabled">
        Failed to Register Wi-Fi Direct:\n  First Enable Wi-Fi</string>
    <string name="warning_unregister_wifi_direct">
        Failed to Unregister Wi-Fi Direct</string>

    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
