<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.rit.se.crashavoidance.MainActivity">
    <item
        android:id="@+id/action_disconnect"
        android:title="@string/action_disconnect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_wifi"
        android:title="@string/action_toggle_wifi"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_logs"
        android:title="@string/action_view_logs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="never" />
</menu>
