<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize">

    <Button
        style="@style/styleButtonDefault"
        android:text="@string/action_toggle_wifi"
        android:id="@+id/toggleWifiButton"
        android:onClick="onClickButtonToggleWifi" />

    <Button
        style="@style/styleButtonDefault"
        android:text="@string/action_register_wifi_direct"
        android:id="@+id/wifiDirectRegistrationButton"
        android:onClick="onClickButtonWifiDirectRegistration" />

    <Button
        style="@style/styleButtonDefault"
        android:text="@string/action_register_receiver"
        android:id="@+id/receiverRegistrationButton"
        android:onClick="onClickButtonReceiverRegistration" />

    <Button
        style="@style/styleButtonDefault"
        android:text="@string/action_register_service"
        android:id="@+id/serviceRegistrationButton"
        android:onClick="onClickButtonServiceRegistration" />

    <Button
        style="@style/styleButtonDefault"
        android:text="@string/action_discover_services"
        android:id="@+id/discoverServicesButton"
        android:onClick="onClickButtonDiscoverServices" />

</LinearLayout>